--- a/P2.ipynb
+++ b/P2.ipynb
@@ -108,7 +108,7 @@
         "%cd T3-ANN\n",
         "!ls\n"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +212,7 @@
         "print('Train shape: {0}'.format(train.shape))\n",
         "print('Test shape: {0}'.format(test.shape))"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +238,7 @@
       "source": [
         "train.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -339,7 +339,7 @@
       "source": [
         "train.describe()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -436,7 +436,7 @@
       "source": [
         "test.describe()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -539,7 +539,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -686,7 +686,7 @@
         "indices_vocabQTest = {i: c for i, c in enumerate(vocab_question)}\n",
         "\n"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -837,7 +837,7 @@
         "model.compile(loss='sparse_categorical_crossentropy', optimizer = 'adam')\n",
         "model.summary()"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -891,32 +891,15 @@
       "metadata": {
         "id": "adYhTEB2YtX5",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "2a2f0b7e-48d4-4a8a-f97d-8c0a88612083"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "X_answers = X_answers.reshape(X_answers.shape[0], X_answers.shape[1],1)\n",
         "X_answers.shape"
       ],
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(86821, 46, 1)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 15
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -935,7 +918,7 @@
         "model.fit(X_train_Q, X_answers, epochs = 10, batch_size = BS,\n",
         "               validation_split = 0.2)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1018,7 +1001,7 @@
       "source": [
         "max_output_length"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1060,7 +1043,7 @@
       "source": [
         "model.predict(X_train_Q[1:2]).shape\n"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1112,7 +1095,7 @@
         "  print('Respuesta: ', answer)\n",
         "print('Los ha predecido todos!')"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
